--- a/merge.ipynb
+++ b/merge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
        "['dark_1.csv', 'dark_2.csv', 'dark_3.csv']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        "4      0     0    0      0       0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        "Name: 32, dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
        "'------W---d---------p--r--l------P---------D--cw-----Lt-e-R----'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
        "'B9C9'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
        "'l'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
        "90"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -343,9 +343,11 @@
        "      <th></th>\n",
        "      <th>id</th>\n",
        "      <th>board</th>\n",
-       "      <th>move</th>\n",
-       "      <th>piece</th>\n",
        "      <th>side</th>\n",
+       "      <th>piece</th>\n",
+       "      <th>atk</th>\n",
+       "      <th>move</th>\n",
+       "      <th>river</th>\n",
        "      <th>trap</th>\n",
        "      <th>den</th>\n",
        "      <th>score</th>\n",
@@ -357,9 +359,11 @@
        "      <th>0</th>\n",
        "      <td>c0d47dce-a898-4bac-adc1-2a1db9893294</td>\n",
        "      <td>l--r--E-T-d-----C---p---W-------------w---P---...</td>\n",
-       "      <td>A3A4</td>\n",
+       "      <td>1</td>\n",
        "      <td>r</td>\n",
        "      <td>1</td>\n",
+       "      <td>A3A4</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -369,9 +373,11 @@
        "      <th>1</th>\n",
        "      <td>c0d47dce-a898-4bac-adc1-2a1db9893294</td>\n",
        "      <td>l--r--E-T-d-----C---p---W-------------w---P---...</td>\n",
-       "      <td>G7G6</td>\n",
-       "      <td>R</td>\n",
        "      <td>-1</td>\n",
+       "      <td>R</td>\n",
+       "      <td>1</td>\n",
+       "      <td>G7G6</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -381,9 +387,11 @@
        "      <th>2</th>\n",
        "      <td>c0d47dce-a898-4bac-adc1-2a1db9893294</td>\n",
        "      <td>l---r-E-T-d-----C---p---W-------------w---P---...</td>\n",
-       "      <td>A4A5</td>\n",
+       "      <td>1</td>\n",
        "      <td>r</td>\n",
        "      <td>1</td>\n",
+       "      <td>A4A5</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -393,9 +401,11 @@
        "      <th>3</th>\n",
        "      <td>c0d47dce-a898-4bac-adc1-2a1db9893294</td>\n",
        "      <td>l---r-E-T-d-----C---p----W------------w---P---...</td>\n",
-       "      <td>C7C8</td>\n",
-       "      <td>W</td>\n",
        "      <td>-1</td>\n",
+       "      <td>W</td>\n",
+       "      <td>4</td>\n",
+       "      <td>C7C8</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -405,9 +415,11 @@
        "      <th>4</th>\n",
        "      <td>c0d47dce-a898-4bac-adc1-2a1db9893294</td>\n",
        "      <td>l----rE-T-d-----C---p----W------------w---P---...</td>\n",
-       "      <td>A5A6</td>\n",
+       "      <td>1</td>\n",
        "      <td>r</td>\n",
        "      <td>1</td>\n",
+       "      <td>A5A6</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -425,30 +437,29 @@
        "3  c0d47dce-a898-4bac-adc1-2a1db9893294   \n",
        "4  c0d47dce-a898-4bac-adc1-2a1db9893294   \n",
        "\n",
-       "                                               board  move piece  side  trap  \\\n",
-       "0  l--r--E-T-d-----C---p---W-------------w---P---...  A3A4     r     1     0   \n",
-       "1  l--r--E-T-d-----C---p---W-------------w---P---...  G7G6     R    -1     0   \n",
-       "2  l---r-E-T-d-----C---p---W-------------w---P---...  A4A5     r     1     0   \n",
-       "3  l---r-E-T-d-----C---p----W------------w---P---...  C7C8     W    -1     0   \n",
-       "4  l----rE-T-d-----C---p----W------------w---P---...  A5A6     r     1     0   \n",
+       "                                               board  side piece  atk  move  \\\n",
+       "0  l--r--E-T-d-----C---p---W-------------w---P---...     1     r    1  A3A4   \n",
+       "1  l--r--E-T-d-----C---p---W-------------w---P---...    -1     R    1  G7G6   \n",
+       "2  l---r-E-T-d-----C---p---W-------------w---P---...     1     r    1  A4A5   \n",
+       "3  l---r-E-T-d-----C---p----W------------w---P---...    -1     W    4  C7C8   \n",
+       "4  l----rE-T-d-----C---p----W------------w---P---...     1     r    1  A5A6   \n",
        "\n",
-       "   den  score  winner  \n",
-       "0    0      0       0  \n",
-       "1    0      0       0  \n",
-       "2    0      0       0  \n",
-       "3    0      0       0  \n",
-       "4    0      0       0  "
+       "   river  trap  den  score  winner  \n",
+       "0      0     0    0      0       0  \n",
+       "1      0     0    0      0       0  \n",
+       "2      0     0    0      0       0  \n",
+       "3      0     0    0      0       0  \n",
+       "4      0     0    0      0       0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_light = pandas.DataFrame()\n",
+    "df_light = df_dark.copy()\n",
     "\n",
-    "df_light['id'] = df_dark['id']\n",
     "df_light['board'] = df_dark['board'].apply(transform_board)\n",
     "df_light['move'] = df_dark['move'].apply(transform_move)\n",
     "df_light['piece'] = df_dark['piece'].apply(transform_piece)\n",
@@ -462,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -603,14 +614,14 @@
        "4      0     0    0      0       0  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.to_csv('animal_chess.csv', index=False)\n",
-    "df_dark.head()"
+    "df.head()"
    ]
   }
  ],
