--- a/split.ipynb
+++ b/split.ipynb
@@ -2,24 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\yamia\\AppData\\Local\\Temp\\ipykernel_10616\\1197588305.py:3: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import math\n",
     "import os\n",
@@ -28,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -78,6 +63,7 @@
        "      <th>piece</th>\n",
        "      <th>atk</th>\n",
        "      <th>move</th>\n",
+       "      <th>position</th>\n",
        "      <th>river</th>\n",
        "      <th>trap</th>\n",
        "      <th>den</th>\n",
@@ -88,12 +74,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>c0d47dce-a898-4bac-adc1-2a1db9893294</td>\n",
-       "      <td>l-r---E-T-d-----C---p---W-------------w---P---...</td>\n",
+       "      <td>0549373a-621c-4103-b077-7908a1b55a16</td>\n",
+       "      <td>l-r---ET--d-----C---p---W-------------w---P---...</td>\n",
        "      <td>-1</td>\n",
-       "      <td>R</td>\n",
-       "      <td>1</td>\n",
-       "      <td>G7G6</td>\n",
+       "      <td>T</td>\n",
+       "      <td>6</td>\n",
+       "      <td>A9A8</td>\n",
+       "      <td>A8</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -102,12 +89,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>c0d47dce-a898-4bac-adc1-2a1db9893294</td>\n",
-       "      <td>l--r--E-T-d-----C---p---W-------------w---P---...</td>\n",
+       "      <td>0549373a-621c-4103-b077-7908a1b55a16</td>\n",
+       "      <td>l--r--ET--d-----C---p---W-------------w---P---...</td>\n",
        "      <td>1</td>\n",
        "      <td>r</td>\n",
        "      <td>1</td>\n",
        "      <td>A3A4</td>\n",
+       "      <td>A4</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -116,12 +104,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>c0d47dce-a898-4bac-adc1-2a1db9893294</td>\n",
-       "      <td>l--r--E-T-d-----C---p---W-------------w---P---...</td>\n",
+       "      <td>0549373a-621c-4103-b077-7908a1b55a16</td>\n",
+       "      <td>l--r--ET--d-----C---p---W-------------w---P---...</td>\n",
        "      <td>-1</td>\n",
        "      <td>R</td>\n",
        "      <td>1</td>\n",
-       "      <td>G6G5</td>\n",
+       "      <td>G7G6</td>\n",
+       "      <td>G6</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -130,12 +119,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>c0d47dce-a898-4bac-adc1-2a1db9893294</td>\n",
-       "      <td>l--r--E-T-d-----C---p---W------------w----P---...</td>\n",
+       "      <td>0549373a-621c-4103-b077-7908a1b55a16</td>\n",
+       "      <td>l---r-ET--d-----C---p---W-------------w---P---...</td>\n",
        "      <td>1</td>\n",
-       "      <td>w</td>\n",
-       "      <td>4</td>\n",
-       "      <td>E3E2</td>\n",
+       "      <td>r</td>\n",
+       "      <td>1</td>\n",
+       "      <td>A4A5</td>\n",
+       "      <td>A5</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -144,12 +134,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>c0d47dce-a898-4bac-adc1-2a1db9893294</td>\n",
-       "      <td>l--r--E-T-d-----C---p---W------------w----P---...</td>\n",
+       "      <td>0549373a-621c-4103-b077-7908a1b55a16</td>\n",
+       "      <td>l---r-ET--d-----C---p---W-------------w---P---...</td>\n",
        "      <td>-1</td>\n",
        "      <td>R</td>\n",
        "      <td>1</td>\n",
-       "      <td>G5G4</td>\n",
+       "      <td>G6G5</td>\n",
+       "      <td>G5</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -162,28 +153,28 @@
       ],
       "text/plain": [
        "                                     id  \\\n",
-       "0  c0d47dce-a898-4bac-adc1-2a1db9893294   \n",
-       "1  c0d47dce-a898-4bac-adc1-2a1db9893294   \n",
-       "2  c0d47dce-a898-4bac-adc1-2a1db9893294   \n",
-       "3  c0d47dce-a898-4bac-adc1-2a1db9893294   \n",
-       "4  c0d47dce-a898-4bac-adc1-2a1db9893294   \n",
+       "0  0549373a-621c-4103-b077-7908a1b55a16   \n",
+       "1  0549373a-621c-4103-b077-7908a1b55a16   \n",
+       "2  0549373a-621c-4103-b077-7908a1b55a16   \n",
+       "3  0549373a-621c-4103-b077-7908a1b55a16   \n",
+       "4  0549373a-621c-4103-b077-7908a1b55a16   \n",
        "\n",
        "                                               board  side piece  atk  move  \\\n",
-       "0  l-r---E-T-d-----C---p---W-------------w---P---...    -1     R    1  G7G6   \n",
-       "1  l--r--E-T-d-----C---p---W-------------w---P---...     1     r    1  A3A4   \n",
-       "2  l--r--E-T-d-----C---p---W-------------w---P---...    -1     R    1  G6G5   \n",
-       "3  l--r--E-T-d-----C---p---W------------w----P---...     1     w    4  E3E2   \n",
-       "4  l--r--E-T-d-----C---p---W------------w----P---...    -1     R    1  G5G4   \n",
+       "0  l-r---ET--d-----C---p---W-------------w---P---...    -1     T    6  A9A8   \n",
+       "1  l--r--ET--d-----C---p---W-------------w---P---...     1     r    1  A3A4   \n",
+       "2  l--r--ET--d-----C---p---W-------------w---P---...    -1     R    1  G7G6   \n",
+       "3  l---r-ET--d-----C---p---W-------------w---P---...     1     r    1  A4A5   \n",
+       "4  l---r-ET--d-----C---p---W-------------w---P---...    -1     R    1  G6G5   \n",
        "\n",
-       "   river  trap  den  score  winner  \n",
-       "0      0     0    0      0       0  \n",
-       "1      0     0    0      0       0  \n",
-       "2      0     0    0      0       0  \n",
-       "3      0     0    0      0       0  \n",
-       "4      0     0    0      0       0  "
+       "  position  river  trap  den  score  winner  \n",
+       "0       A8      0     0    0      0       0  \n",
+       "1       A4      0     0    0      0       0  \n",
+       "2       G6      0     0    0      0       0  \n",
+       "3       A5      0     0    0      0       0  \n",
+       "4       G5      0     0    0      0       0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,16 +186,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "2"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -224,14 +215,13 @@
      "output_type": "stream",
      "text": [
       "dark_1.csv saved\n",
-      "dark_2.csv saved\n",
-      "dark_3.csv saved\n"
+      "dark_2.csv saved\n"
      ]
     }
    ],
    "source": [
     "for i in range(n_files):\n",
-    "    file_name_i = DARK_FILE_NAME.replace('.csv', f'_{i+1}.csv')\n",
+    "    file_name_i = DARK_FILE_NAME.replace('.csv', f'_{i +1 }.csv')\n",
     "    df_i = df[i * N_ROWS:(i + 1) * N_ROWS]\n",
     "    df_i.to_csv(file_name_i, index=False)\n",
     "    print(f'{file_name_i} saved')"
@@ -239,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
