--- a/split.ipynb
+++ b/split.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "import math\n",
@@ -13,8 +15,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "N_ROWS = 10_000_000"
@@ -22,8 +26,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "DARK_FILE_NAME = 'dark.csv'\n",
@@ -33,8 +39,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [
     {
      "data": {
@@ -63,7 +71,6 @@
        "      <th>piece</th>\n",
        "      <th>atk</th>\n",
        "      <th>move</th>\n",
-       "      <th>position</th>\n",
        "      <th>river</th>\n",
        "      <th>trap</th>\n",
        "      <th>den</th>\n",
@@ -80,7 +87,6 @@
        "      <td>T</td>\n",
        "      <td>6</td>\n",
        "      <td>A9A8</td>\n",
-       "      <td>A8</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -95,7 +101,6 @@
        "      <td>r</td>\n",
        "      <td>1</td>\n",
        "      <td>A3A4</td>\n",
-       "      <td>A4</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -110,7 +115,6 @@
        "      <td>R</td>\n",
        "      <td>1</td>\n",
        "      <td>G7G6</td>\n",
-       "      <td>G6</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -125,7 +129,6 @@
        "      <td>r</td>\n",
        "      <td>1</td>\n",
        "      <td>A4A5</td>\n",
-       "      <td>A5</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -140,7 +143,6 @@
        "      <td>R</td>\n",
        "      <td>1</td>\n",
        "      <td>G6G5</td>\n",
-       "      <td>G5</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -166,15 +168,15 @@
        "3  l---r-ET--d-----C---p---W-------------w---P---...     1     r    1  A4A5   \n",
        "4  l---r-ET--d-----C---p---W-------------w---P---...    -1     R    1  G6G5   \n",
        "\n",
-       "  position  river  trap  den  score  winner  \n",
-       "0       A8      0     0    0      0       0  \n",
-       "1       A4      0     0    0      0       0  \n",
-       "2       G6      0     0    0      0       0  \n",
-       "3       A5      0     0    0      0       0  \n",
-       "4       G5      0     0    0      0       0  "
+       "   river  trap  den  score  winner  \n",
+       "0      0     0    0      0       0  \n",
+       "1      0     0    0      0       0  \n",
+       "2      0     0    0      0       0  \n",
+       "3      0     0    0      0       0  \n",
+       "4      0     0    0      0       0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,8 +188,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [
     {
      "data": {
@@ -195,7 +199,7 @@
        "2"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,8 +211,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -229,8 +235,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "os.remove(DARK_FILE_NAME)\n",
