--- a/split.ipynb
+++ b/split.ipynb
@@ -8,6 +8,7 @@
    },
    "outputs": [],
    "source": [
+    "import glob\n",
     "import math\n",
     "import os\n",
     "import pandas"
@@ -21,7 +22,7 @@
    },
    "outputs": [],
    "source": [
-    "N_ROWS = 10_000_000"
+    "N_ROWS = 15_000_000"
    ]
   },
   {
@@ -217,6 +218,51 @@
    },
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "['dark_1.csv', 'dark_2.csv']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "files_to_remove = glob.glob(os.path.join('dark_*.csv'))\n",
+    "files_to_remove"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Removed dark_1.csv\n",
+      "Removed dark_2.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "for file in files_to_remove:\n",
+    "    os.remove(file)\n",
+    "    print(f'Removed {file}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -235,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "metadata": {}
    },
